--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,105 @@
 * {margin: 0px; padding: 0px;}
 ul,ol {list-style: none;}
 a {text-decoration: none;}
+@import url('https://fonts.googleapis.com/css2?family=Bellota+Text:wght@300&family=Noto+Sans+KR:wght@300&family=Orbitron&family=Poppins:wght@200&display=swap');
 
 .hidden {
     display: none;
+}
+body {
+    text-align: center;
+    img {
+        z-index: -1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    #login-form {
+        margin-top: 200px;
+    }
+
+    #clock {
+        font: bold 80px/1 "orbitron";
+        color: #fff;
+        letter-spacing: 10px;
+        margin-bottom: 50px;
+    }
+
+    #todo-form {
+        input[type=text]{
+            width: 400px;
+            height: 50px;
+            background: none;
+            border: none;
+            border-bottom: 3px solid #fff;
+            text-align: center;
+            margin-bottom: 30px;
+            &::placeholder {
+                font: bold 20px/1 "poppins";
+                letter-spacing: 1px;
+                color: #fff;
+            }
+        }
+    }
+
+    #todo-list {
+        li {
+            position: relative;
+            width: 500px;
+            height: 50px;
+            background: #fff;
+            margin-bottom: 20px;
+            text-align: left;
+            padding-left: 20px;
+            opacity: 0.8;
+            
+            button {
+                cursor: pointer;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(690%, -50%);
+
+                width: 30px;
+                height: 30px;
+                font-size: 15px;
+                color: #fff;
+                background-color: rgb(200, 200, 200);
+                opacity: 0.8;
+                border: none;
+                border-radius: 15px;
+                transition: 0.25s;
+                &:hover {
+                    background-color: crimson;
+                    transition: 0.25s;
+                }
+            }
+        }
+    }
+
+    #weather {
+        margin-bottom: 50px;
+        font: bold 30px/1 "poppins";
+        letter-spacing: 1.5px;
+        color: #fff;
+        span {
+            margin-bottom: 30px;
+        }
+    }
+
+    #quote {
+        position: absolute;
+        bottom: 50px;
+        left: 50%;
+        transform: translate(-50%, 0%);
+
+        font: bold 18px/1.5 "poppins";
+        letter-spacing: 1.5px;
+        border-bottom: 3px solid #fff;
+        padding-bottom: 5px;
+        color: #fff;
+    }
 }
