--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,91 +16,155 @@ body {
         left: 0;
         width: 100%;
         height: 100%;
+        filter: grayscale(0.3);
     }
 
     #login-form {
-        margin-top: 200px;
-    }
-
-    #clock {
-        font: bold 80px/1 "orbitron";
-        color: #fff;
-        letter-spacing: 10px;
-        margin-bottom: 50px;
-    }
-
-    #todo-form {
+        position: absolute;
+        top: 150px;
+        left: 50%;
+        transform: translate(-50%, 0%);
+        border-bottom: 3px solid crimson;
         input[type=text]{
-            width: 400px;
+            width: 340px;
             height: 50px;
             background: none;
             border: none;
-            border-bottom: 3px solid #fff;
-            text-align: center;
-            margin-bottom: 30px;
             &::placeholder {
                 font: bold 20px/1 "poppins";
-                letter-spacing: 1px;
                 color: #fff;
+                text-align: center;
+                transform: translateX(30px);
+            }
+        }
+        input[type=submit] {
+            cursor: pointer;
+            background-color: crimson;
+            color: #fff;
+            width: 60px;
+            height: 30px;
+            border: none;
+            transition: 0.25s;
+            &:hover {
+                background: #fff;
+                color: crimson;
+                transition: 0.25s;
             }
         }
     }
 
-    #todo-list {
-        li {
-            position: relative;
-            width: 500px;
-            height: 50px;
-            background: #fff;
-            margin-bottom: 20px;
-            text-align: left;
-            padding-left: 20px;
-            opacity: 0.8;
-            
-            button {
-                cursor: pointer;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(690%, -50%);
+    #greeting {
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        color: #fff;
+        
+        &::first-letter {
+            color: crimson;
+        }
+    }
 
-                width: 30px;
-                height: 30px;
-                font-size: 15px;
-                color: #fff;
-                background-color: rgb(200, 200, 200);
-                opacity: 0.8;
+    .inner {
+        #clock {
+            font: bold 80px/1 "orbitron";
+            color: #fff;
+            letter-spacing: 10px;
+            position: absolute;
+            top: 250px;
+            left: 50%;
+            transform: translate(-50%, 0%);
+        }
+    
+        #todo-form {
+            position: absolute;
+            top: 360px;
+            left: 50%;
+            transform: translate(-50%, 0%);
+
+            input[type=text]{
+                width: 400px;
+                height: 50px;
+                background: none;
                 border: none;
-                border-radius: 15px;
-                transition: 0.25s;
-                &:hover {
-                    background-color: crimson;
-                    transition: 0.25s;
+                border-bottom: 3px solid crimson;
+                text-align: center;
+                margin-bottom: 30px;
+                &::placeholder {
+                    font: bold 20px/1 "poppins";
+                    letter-spacing: 1px;
+                    color: #fff;
                 }
             }
         }
-    }
-
-    #weather {
-        margin-bottom: 50px;
-        font: bold 30px/1 "poppins";
-        letter-spacing: 1.5px;
-        color: #fff;
-        span {
-            margin-bottom: 30px;
+    
+        #todo-list {
+            position: absolute;
+            top: 450px;
+            left: 50%;
+            transform: translate(-50%, 0%);
+        
+            li {
+                position: relative;
+                width: 500px;
+                height: 50px;
+                line-height: 50px;
+                background: #fff;
+                border: none;
+                margin-bottom: 20px;
+                text-align: left;
+                padding-left: 20px;
+                opacity: 0.8;
+                font: bold 18px/50px "poppins";
+                color: #555;
+    
+                button {
+                    cursor: pointer;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(690%, -50%);
+    
+                    width: 30px;
+                    height: 30px;
+                    font-size: 15px;
+                    color: #fff;
+                    background-color: rgb(200, 200, 200);
+                    // opacity: 0.8;
+                    border: none;
+                    border-radius: 15px;
+                    transition: 0.25s;
+                    &:hover {
+                        background-color: crimson;
+                        transition: 0.25s;
+                    }
+                }
+            }
         }
-    }
-
-    #quote {
-        position: absolute;
-        bottom: 50px;
-        left: 50%;
-        transform: translate(-50%, 0%);
-
-        font: bold 18px/1.5 "poppins";
-        letter-spacing: 1.5px;
-        border-bottom: 3px solid #fff;
-        padding-bottom: 5px;
-        color: #fff;
+    
+        #weather {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            text-align: left;
+            font: bold 30px/1.2 "poppins";
+            letter-spacing: 1.5px;
+            color: #fff;
+            &::first-letter {
+                color: crimson;
+            }
+        }
+    
+        #quote {
+            position: absolute;
+            bottom: 50px;
+            left: 50%;
+            transform: translate(-50%, 0%);
+    
+            font: bold 18px/1.5 "poppins";
+            letter-spacing: 1.5px;
+            border-bottom: 3px solid crimson;
+            padding-bottom: 5px;
+            color: #fff;
+        }
     }
 }
